fix overflow

--- a/index.css
+++ b/index.css
@@ -11,7 +11,23 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     height: 100svh;
+    position: relative;
+}
+
+header {
+    background-color: #FDF5AA;
+    width: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 7px;
+    font-size: 1rem;
+    margin-bottom: 10px;
+    gap: 0.5rem;
+    position: absolute;
+    top: 9rem;
 }
 
 main {
@@ -23,15 +39,10 @@ main {
     flex-direction: column;
     padding: 1rem;
     border-radius: 7px;
-}
-
-main > h1 {
-    background-color: #34699A;
-    width: 95%;
-    text-align: center;
-    padding: 0.5rem;
-    border-radius: 7px;
-    color: white;
+    overflow: auto;
+    position: absolute;
+    position: absolute;
+    top: 15rem;
 }
 
 main > article {
@@ -51,6 +62,7 @@ article > input {
     border-radius: 7px;
     border-style: solid;
     border-color: #34699A #34699A;
+    font-size: 1.15rem;
 }
 
 article > button {
@@ -58,7 +70,7 @@ article > button {
     font-size: 1.15rem;
     background-color: #34699A;
     color: white;
-    border: none;
+    border-style: none;
     border-radius: 7px;
     height: 100%;
 }
@@ -67,17 +79,13 @@ article > button:hover {
     background-color: #113F67;
 }
 
-ul {
-    margin: 1rem;
-}
-
 .list {
     margin-top: 7px;
     padding: 22px;
     border-style: solid;
     border-color: #34699A #34699A;
     border-radius: 7px;
-    background-color: #FDF5AA;
+    background-color: #58A0C8;
     display: flex;
     justify-content: space-between;
     font-size: 1.15rem;
@@ -85,6 +93,11 @@ ul {
 
 p.list {
     margin: 0;
+}
+
+.center {
+    display: flex;
+    align-items: center;
 }
 
 @media screen and (max-width: 756px) {
